# nikola

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  TASKS.md  donations.txt  verify_references.sh
docs/: EACM_specification.md  GENESIS_PHASE_0_COMPLETION.md  MODULE_5_INTERIOR_LIFE.md  MODULE_6_SUBJECTIVE_EXPERIENCE.md  OEEDM_specification.md  computational_field_theory.md  directives.txt  offensive_ego_exploitation_research.md  resiliance.txt
docs/info/: Enhancing Engineering Report for Grant.md  Enhancing Engineering Report for Grant.odt  Enhancing Engineering Report for Grant.txt  FINAL_REPORT_DESIGN.md  INTEGRATION_GAP_ANALYSIS.md  Nikola_Model_Academic_Report.txt  Nikola_Model_Academic_Report2.txt  Nikola_Model_Academic_Report3.txt  nikola_plan_compiled.txt  specs.txt
docs/info/academic/: Nikola_Model.odt  Nikola_Model.txt
docs/info/engineering/: 01_executive_summary.txt  07_multimodal.txt  11_appendices.txt  README.txt  compile.sh  nikola_full.txt
docs/info/final/: 00_front_matter.txt  01_executive_summary.md  02_foundations.md  03_cognitive_systems.txt  04_infrastructure.md  05_autonomous_systems.md  05_autonomous_systems.txt  06_persistence.md  08_implementation_guide.md  09_detailed_specifications.md  10_protocols_interfaces.md  11_appendices.md  AGI Engineering Report Academic Synthesis.txt  BUILD_STATUS.md  INTEGRATION_COMPLETE.md  SESSION_SUMMARY.md  nikola_full.md  nikola_full.txt
docs/info/gemini/: INTEGRATION_NOTES_bug_sweep_005.md  INTEGRATION_NOTES_remaining_sweeps.md  NAVIGATION_GUIDE.txt  README.md  SESSION_SUMMARY.md  SUMMARY.md  TASK_INDEX.md  info.txt
docs/info/integration/: 2_Engineering Report Code Review(NotYetImplemented).txt  3_Engineering Report Review and Analysis(NOT_INTEGRATED).txt  4_Researching Nikola Model Defects(NOT_INTEGRATED).txt  AUDIT_2_REMEDIATION_PROGRESS.md  AUDIT_3_REMEDIATION_PROGRESS.md  AUDIT_4_REMEDIATION_PROGRESS.md  AUDIT_5_REMEDIATION_PROGRESS.md  AUDIT_INTEGRATION_COMPLETE.md  AUDIT_INTEGRATION_COMPLETE_V2.md  AUDIT_INTEGRATION_SUMMARY.md  AUDIT_INTEGRATION_V2_COMPLETE.md  AUDIT_REMEDIATION_COMPLETE.md  BATCH5_COMPLETION_GUIDE.md  BugReview_v0.0.4_INTEGRATED_20251207.txt  COMPILATION_SUMMARY.md  COMPLETE_INTEGRATION_STATUS.md  COMPREHENSIVE_AUDIT_INTEGRATION_COMPLETE.md  COMPREHENSIVE_AUDIT_PROGRESS_V3.md  Engineering Report Review for Custom Model(NotYetImplemented).txt  EngineeringReview_Phase2_INTEGRATED_20251207.txt  GEMINI_RESEARCH_TASKS_DEC_14_2025.md  INDEX.md  INDEX.txt  INDEX_GEMINI.txt  INDEX_OLD.txt  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_20251207.md  INTEGRATION_LOG_20251207.md  INTEGRATION_LOG_20251207_PHASE2.md  INTEGRATION_STATUS.md  LATEST.txt  NIKOLA_AUDIT_INTEGRATION_COMPLETE.md  NIKOLA_COMPLETE_INTEGRATION.txt  (+6 more)
docs/research/: 3.txt  5.txt  6.txt  AI Research and Implementation Plan.txt  AI Research and Implementation Plan_Addendum.txt  ARIA_NIKOLA_INTEGRATION_SPEC.md  Aria Cortex Research and Implementation.txt  NEW2_Engineering Report Review and Analysis.txt  NEW_Engineering Report Review and Analysis.txt  Training Aria as Native Language.txt  compiled.txt
proto/economy/: nes.proto
proto/social/: irsp.proto
scripts/: cleanup_backups.sh  renumber_log_20260108_041734.txt  renumber_log_20260108_041834.txt  renumber_nikola_docs.sh
src/aria/: code_generator.cpp  compiler.cpp  interpreter.cpp  metaprogramming.cpp  native_interface.cpp
src/cognitive/: attention_primer.cpp  scratchpad.cpp  spectral_filter.cpp
src/core/: config.cpp
src/economy/: marketplace.cpp  wallet.cpp
src/interior/: affective_state.cpp  autobiography.cpp  curiosity.cpp  dream_engine.cpp  internal_dialogue.cpp  wave_mirror.cpp
src/security/: homeostasis.cpp  polymorphic_defense.cpp
src/social/: membrane.cpp  peer_registry.cpp
tests/: config_test.cpp  genesis_stub_test.cpp
tools/: sync.sh
(+352 files in other folders)
